@startuml

header Демо проект для компании Евраз
title Схема БД

hide circle
skinparam linetype ortho


entity user {
  * **id**  :  int
  __
  **login**  :  varchar (unique)
  __
  **password**  :  text
  __
  **name**  :  varchar
  __
  email  :  varchar
}

entity chat {
  * **id**  :  int
  __
  **title**  :  varchar
  __
  description  :  text
}

entity chat_participant {
  * **chat_id**  :  int
  __
  * **user_id**  :  int
  __
  **creator**  :  bool
  __
  **date added**  :  datetime
  __
  banned  :  datetime | NULL
  __
  left  :  datetime | NULL
}

entity message {
  * **id**  :  int
  __
  * **chat_id**  :  int
  __
  * **user_id**  :  int
  __
  **text**  :  text
  __
  **Date created**  :  datetime
}

user ||--o{ chat_participant
chat_participant }|--|| chat
user ||--o{ message
message }o--|| chat
@enduml
